--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <meta content="https://www.savingurmialake.ir" property="og:url" />
         <meta content="Home · Saving Urmia Lake" property="og:title" />
         <meta content="Dedicated to Saving Urmia Lake" property="og:description" />
-        <meta content="gallery/images/opengraph.jpg" property="og:image" />
+	<meta property="og:image" content="https://www.savingurmialake.ir/gallery/images/opengraph.jpg" />
         <meta content="Home · Saving Urmia Lake" property="twitter:title" />
         <meta content="Dedicated to Saving Urmia Lake" property="twitter:description" />
         <meta content="gallery/images/opengraph.jpg" property="twitter:image" />
